# mona

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
examples/: CMakeLists.txt  main.cpp
examples/grid_view/: CMakeLists.txt  main.cpp
examples/line_plot/: CMakeLists.txt  main.cpp
examples/save_to_png/: CMakeLists.txt  main.cpp
examples/scatter_plot/: CMakeLists.txt  main.cpp
examples/surface_plot/: CMakeLists.txt  main.cpp
include/mona/: axes.hpp  axes3.hpp  bars.hpp  camera.hpp  camera_control.hpp  camera_input_control.hpp  camera_rotation_control.hpp  camera_steady_control.hpp  colors.hpp  dots.hpp  grid.hpp  line.hpp  line_grid.hpp  line_renderer.hpp  mesh.hpp  rect.hpp  resource.hpp  series.hpp  source.hpp  surface_mesh.hpp  text_renderer.hpp  utility.hpp  viewport.hpp
include/mona/internal/: grid.hpp  shader.hpp  text_renderer.hpp
include/mona/plot/: surface.hpp
include/mona/targets/: png.hpp  target.hpp  viewport.hpp  window.hpp
res/shaders/: dots.frag  dots.geom  lines.vert  picker_shader.frag  shader.frag  shader.vert  text_shader.vert
src/: axes.cpp  axes3.cpp  camera.cpp  camera_control.cpp  camera_input_control.cpp  dots.cpp  io.cpp  io.hpp  line.cpp  line_renderer.cpp  shader.cpp  surface_mesh.cpp  text_renderer.cpp  viewport.cpp
src/plot/: surface.cpp
src/slam/: slam.cpp  slam.h
src/stb/: stb.cpp
